--- a/src/Makefile
+++ b/src/Makefile
@@ -2,25 +2,16 @@ CC = g++ -g -std=c++17
 CFLAG = -c -Wall -Werror -Wextra
 GCOVFLAG = -fprofile-arcs -ftest-coverage
 GTESTFLAGS = -lgtest
-CPPFILE = s21_matrix_operation.cpp s21_matrix_oop.cpp s21_matrix_operator.cpp s21_matrix_sub_function.cpp
-OFILE = s21_matrix_operation.o s21_matrix_oop.o s21_matrix_operator.o s21_matrix_sub_function.o
+CPPFILE = s21_matrix_oop.cpp
+OFILE = s21_matrix_oop.o
 
 all: clean s21_matrix_oop.a test
-
-s21_matrix_operation.o:
-	$(CC) $(CFLAG) s21_matrix_operation.cpp -o s21_matrix_operation.o
 
 s21_matrix_oop.o:
 	$(CC) $(CFLAG) s21_matrix_oop.cpp -o s21_matrix_oop.o
 
-s21_matrix_operator.o:
-	$(CC) $(CFLAG) s21_matrix_operator.cpp -o s21_matrix_operator.o
-
-s21_matrix_sub_function.o:
-	$(CC) $(CFLAG) s21_matrix_sub_function.cpp -o s21_matrix_sub_function.o
-
 test.o:
-	$(CC) -c test.cpp -o test.o
+	$(CC) $(CFLAG) test.cpp -o test.o
 
 s21_matrix_oop.a: $(OFILE)
 	ar rcs s21_matrix_oop.a $(OFILE)
@@ -29,8 +20,9 @@ test: s21_matrix_oop.a test.o
 	$(CC) s21_matrix_oop.a test.o -o test $(GTESTFLAGS)
 	./test
 
-gcov_report: $(OFILE)
-	$(CC) $(GCOVFLAG) $(OFILE) test.cpp -o gcov $(GTESTFLAGS)
+gcov_report: test.o
+	$(CC) $(CFLAG) $(GCOVFLAG) s21_matrix_oop.cpp -o s21_matrix_oop.o
+	$(CC) $(GCOVFLAG) $(OFILE) test.o -o gcov $(GTESTFLAGS)
 	./gcov
 	lcov -t "gcov_report" -o gcov_report.info -c -d ./
 	genhtml -o report gcov_report.info
